--- a/artifacts/acvp_sub_kdf135.html
+++ b/artifacts/acvp_sub_kdf135.html
@@ -378,6 +378,7 @@
 <link href="#rfc.section.1.1" rel="Chapter" title="1.1 Requirements Language"/>
 <link href="#rfc.section.2" rel="Chapter" title="2 Capabilities Registration"/>
 <link href="#rfc.section.2.1" rel="Chapter" title="2.1 Supported SP800-135 KDF Algorithms"/>
+<link href="#rfc.section.2.2" rel="Chapter" title="2.2 Supported SP800-135 KDF Algorithms"/>
 <link href="#rfc.section.3" rel="Chapter" title="3 Test Vectors"/>
 <link href="#rfc.section.3.1" rel="Chapter" title="3.1 Test Groups JSON Schema"/>
 <link href="#rfc.section.3.2" rel="Chapter" title="3.2 Test Vectors JSON Schema"/>
@@ -458,6 +459,7 @@
 <ul><li>1.1.   <a href="#rfc.section.1.1">Requirements Language</a></li>
 </ul><li>2.   <a href="#rfc.section.2">Capabilities Registration</a></li>
 <ul><li>2.1.   <a href="#rfc.section.2.1">Supported SP800-135 KDF Algorithms</a></li>
+<li>2.2.   <a href="#rfc.section.2.2">Supported SP800-135 KDF Algorithms</a></li>
 </ul><li>3.   <a href="#rfc.section.3">Test Vectors</a></li>
 <ul><li>3.1.   <a href="#rfc.section.3.1">Test Groups JSON Schema</a></li>
 <li>3.2.   <a href="#rfc.section.3.2">Test Vectors JSON Schema</a></li>
@@ -497,43 +499,127 @@
   <tbody>
     <tr>
       <td class="left">algorithm</td>
-      <td class="left">The hash algorithm and mode to be validated.</td>
+      <td class="left">The KDF to be validated.</td>
       <td class="left">value</td>
       <td class="left">See <a href="#supported_algs">Section 2.1</a></td>
       <td class="left">No</td>
     </tr>
     <tr>
-      <td class="left">inbyte</td>
-      <td class="left">Implementation only hashes byte-oriented messages</td>
+      <td class="left">aesval</td>
+      <td class="left">The TDES validation number or implemented in same implementation(SRTP).</td>
       <td class="left">value</td>
-      <td class="left">yes, no</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left">inempty</td>
-      <td class="left">Implementation does not accept Null (zero-length) messages</td>
-      <td class="left">value</td>
-      <td class="left">yes, no</td>
-      <td class="left">No</td>
-    </tr>
-    <tr>
-      <td class="left">outbyte</td>
-      <td class="left">Implementation only outputs  byte-oriented messages</td>
-      <td class="left">value</td>
-      <td class="left">yes, no</td>
+      <td class="left">same or value</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">inlen</td>
-      <td class="left">Minimum input length</td>
+      <td class="left">hmacval</td>
+      <td class="left">The HMAC validation number or implemented in same implementation(IKEv1, IKEv2, TLS, TPM).</td>
       <td class="left">value</td>
+      <td class="left">same or value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">shaval</td>
+      <td class="left">The SHA validation number or implemented in same implementation(IKEv1, IKEv2, ANS X9.63-2001, SSH, SNMP, TLS, TPM).</td>
+      <td class="left">value</td>
+      <td class="left">same or value</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">methods</td>
+      <td class="left">Type of method or algorithm supported</td>
+      <td class="left">array</td>
+      <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">sha</td>
+      <td class="left">SHA functions supported</td>
+      <td class="left">array</td>
+      <td class="left">SHA-1, SHA-224, SHA-256, SHA-384, SHA-512</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">keylen</td>
+      <td class="left">Key length minimum and maximum</td>
+      <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
     </tr>
     <tr>
-      <td class="left">outlen</td>
-      <td class="left">Maximum output length</td>
-      <td class="left">value</td>
+      <td class="left">EngineID</td>
+      <td class="left">SNMP: Two engine IDs in hexidecimal, can be the same</td>
+      <td class="left">array</td>
+      <td class="left">0-0xF</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">plen</td>
+      <td class="left">SNMP: Password minimum and maximum lengths</td>
+      <td class="left">array</td>
+      <td class="left">alphanumeric</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">kdr0</td>
+      <td class="left">SRTP: Key Derivation Rate 0</td>
+      <td class="left">array</td>
+      <td class="left">all, 1-24</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">kdr1</td>
+      <td class="left">SRTP: Key Derivation Rate 1</td>
+      <td class="left">array</td>
+      <td class="left">all, 1-24</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">field</td>
+      <td class="left">ANSI X9.63: Minimum and Maximum field size in </td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">sharedinfo</td>
+      <td class="left">ANSI X9.63: Minimum and Maximum sharedinfo size in bits</td>
+      <td class="left">array</td>
+      <td class="left">0-1024</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">initiator</td>
+      <td class="left">IKE: Minimum and maximum lengths in bytes</td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">responder</td>
+      <td class="left">IKE: Minimum and maximum lengths in bytes</td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">psk</td>
+      <td class="left">IKE: Pre-shared key minimum and maximum lengths in bytes</td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">dhkey</td>
+      <td class="left">IKE: Three Diffie-Hellman shared secret key lengths in bytes</td>
+      <td class="left">array</td>
+      <td class="left">0-65536</td>
+      <td class="left">Yes</td>
+    </tr>
+    <tr>
+      <td class="left">dkmlen</td>
+      <td class="left">IKE: Minimum and maximum lengths of the 7 keys derived by SKEYSEED in bytes</td>
+      <td class="left">array</td>
       <td class="left">0-65536</td>
       <td class="left">Yes</td>
     </tr>
@@ -545,22 +631,35 @@
 <p/>
 
 <ul>
-  <li>SHA-1</li>
-  <li>SHA-224</li>
-  <li>SHA-256</li>
-  <li>SHA-384</li>
-  <li>SHA-512</li>
-  <li>SHA-512-224</li>
-  <li>SHA-512-256</li>
-  <li>SHA3-224</li>
-  <li>SHA3-256</li>
-  <li>SHA3-384</li>
-  <li>SHA3-512</li>
-  <li>SHAKE-128</li>
-  <li>SHAKE-256</li>
+  <li>IKEv1</li>
+  <li>IKEv2</li>
+  <li>TLS</li>
+  <li>ANSI X9.63</li>
+  <li>SSH</li>
+  <li>SRTP</li>
+  <li>SNMP</li>
+  <li>TPM</li>
+</ul>
+<h1 id="rfc.section.2.2"><a href="#rfc.section.2.2">2.2.</a> <a href="#supported_methods" id="supported_methods">Supported SP800-135 KDF Algorithms</a></h1>
+<p id="rfc.section.2.2.p.1">The following SP800-135 KDF algorithms may be advertised by the ACVP compliant crypto module:</p>
+<p/>
+
+<ul>
+  <li>Digital Signature(IKEv1)</li>
+  <li>Public Key Encryption(IKEv1)</li>
+  <li>Pre-shared Key(IKEv1)</li>
+  <li>TLS 1.0/1.1(TLS)</li>
+  <li>TLS 1.2(TLS)</li>
+  <li>TDES CBC(SSH)</li>
+  <li>AES-128-CBC(SSH)</li>
+  <li>AES-192-CBC(SSH)</li>
+  <li>AES-256-CBC(SSH)</li>
+  <li>AES-128-CBC(SRTP)</li>
+  <li>AES-192-CBC(SRTP)</li>
+  <li>AES-256-CBC(SRTP)</li>
 </ul>
 <h1 id="rfc.section.3"><a href="#rfc.section.3">3.</a> <a href="#test_vectors" id="test_vectors">Test Vectors</a></h1>
-<p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual crypto algorithm, such as SHA-1, SHA-224, SHA-256, etc.  This section describes the JSON schema for a test vector set used with SP800-135 KDF algorithms.</p>
+<p id="rfc.section.3.p.1">The ACVP server provides test vectors to the ACVP client, which are then processed and returned to the ACVP server for validation.  A typical ACVP validation session would require multiple test vector sets to be downloaded and processed by the ACVP client.  Each test vector set represents an individual Key Derivation Function (KDF), such as SNMP, SSH,  etc.  This section describes the JSON schema for a test vector set used with SP800-135 KDF algorithms.</p>
 <p id="rfc.section.3.p.2">The test vector set JSON schema is a multi-level hierarchy that contains meta data for the entire vector set as well as individual test vectors to be processed by the ACVP client.  The following table describes the JSON elements at the top level of the hierarchy.  </p>
 <div id="rfc.table.2"/>
 <div id="vs_top_table"/>
@@ -597,9 +696,9 @@
   </tbody>
 </table>
 <h1 id="rfc.section.3.1"><a href="#rfc.section.3.1">3.1.</a> <a href="#tgjs" id="tgjs">Test Groups JSON Schema</a></h1>
-<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the SP800-135 KDF JSON elements of the Test Group JSON object.</p>
+<p id="rfc.section.3.1.p.1">The test_groups element at the top level in the test vector JSON object is an array of test groups.  Test vectors are grouped into similar test cases to reduce the amount of data transmitted in the vector set.  For instance, all test vectors that use the same key size would be grouped together.  The Test Group JSON object contains meta data that applies to all test vectors within the group.  The following table describes the SP800-135 KDF IKEv1 JSON elements of the Test Group JSON object.</p>
 <div id="rfc.table.3"/>
-<div id="vs_tg_table"/>
+<div id="vs_tg_table1"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Group JSON Object</caption>
   <thead>
@@ -612,9 +711,71 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">type</td>
-      <td class="left">Type of test: short, long or MonteCarlo</td>
-      <td class="left">value</td>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.2">The following table describes the SP800-135 KDF IKEv2 JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.4"/>
+<div id="vs_tg_table2"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.3">The following table describes the SP800-135 KDF ANS X9.63 JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.5"/>
+<div id="vs_tg_table3"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">field</td>
+      <td class="left">Minimum and maximum field size</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">sharedinfo</td>
+      <td class="left">Minimum and maximum sharedinfo length</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">keylen</td>
+      <td class="left">Minimum and maximum key lengths, maximum less than or equal to 4096</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">sha</td>
+      <td class="left">SHA functions supported</td>
+      <td class="left">array</td>
       <td class="left">No</td>
     </tr>
     <tr>
@@ -625,9 +786,173 @@
     </tr>
   </tbody>
 </table>
+<p id="rfc.section.3.1.p.4">The following table describes the SP800-135 KDF SSH JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.6"/>
+<div id="vs_tg_table4"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">methods</td>
+      <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">sha</td>
+      <td class="left">SHA functions supported</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.5">The following table describes the SP800-135 KDF SRTP JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.7"/>
+<div id="vs_tg_table5"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">methods</td>
+      <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">kdr0</td>
+      <td class="left">Key Derivation Rate 0</td>
+      <td class="left">array or all</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">kdr1</td>
+      <td class="left">Key Derivation Rate 0</td>
+      <td class="left">array or all</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.6">The following table describes the SP800-135 KDF SNMP JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.8"/>
+<div id="vs_tg_table6"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">EngineID</td>
+      <td class="left">Engine ID</td>
+      <td class="left">value</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">plen</td>
+      <td class="left">Password length</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.7">The following table describes the SP800-135 KDF TLS JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.9"/>
+<div id="vs_tg_table7"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">methods</td>
+      <td class="left">See <a href="#supported_methods">Section 2.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">sha</td>
+      <td class="left">SHA functions supported</td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.3.1.p.8">The following table describes the SP800-135 KDF TMP JSON elements of the Test Group JSON object.</p>
+<div id="rfc.table.10"/>
+<div id="vs_tg_table8"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Test Group JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+      <th class="left">Optional</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td class="left">tests</td>
+      <td class="left">Array of individual test vector JSON objects, which are defined in <a href="#tvjs">Section 3.2</a></td>
+      <td class="left">array</td>
+      <td class="left">No</td>
+    </tr>
+  </tbody>
+</table>
 <h1 id="rfc.section.3.2"><a href="#rfc.section.3.2">3.2.</a> <a href="#tvjs" id="tvjs">Test Vectors JSON Schema</a></h1>
 <p id="rfc.section.3.2.p.1">Each test group contains an array of one or more test vectors.  Each test vector is a JSON object that represents a single test case to be processed by the ACVP client.  The following table describes the JSON elements for each SP800-135 KDF test vector.</p>
-<div id="rfc.table.4"/>
+<div id="rfc.table.11"/>
 <div id="vs_tc_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Test Case JSON Object</caption>
@@ -668,7 +993,7 @@
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
 <p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
-<div id="rfc.table.5"/>
+<div id="rfc.table.12"/>
 <div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
