--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -410,8 +410,8 @@
   <link rel="schema.dct" href="http://purl.org/dc/terms/" />
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
-  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-00" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-7-22" />
+  <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-8-4" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -432,10 +432,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">July 22, 2016</td>
+  <td class="right">August 4, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: January 23, 2017</td>
+  <td class="left">Expires: February 5, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -444,7 +444,7 @@
   </table>
 
   <p class="title">Automated Cryptographic Validation Protocol <br />
-  <span class="filename">draft-ietf-acvp-protocol-00</span></p>
+  <span class="filename">draft-ietf-acvp-protocol-0.2</span></p>
   
   <h1 id="rfc.abstract">
   <a href="#rfc.abstract">Abstract</a>
@@ -456,7 +456,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on January 23, 2017.</p>
+<p>This Internet-Draft will expire on February 5, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
