--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -386,7 +386,7 @@
 <link href="#rfc.section.6" rel="Chapter" title="6 IANA Considerations"/>
 <link href="#rfc.section.7" rel="Chapter" title="7 Security Considerations"/>
 <link href="#rfc.references" rel="Chapter" title="8 Normative References"/>
-<link href="#rfc.appendix.A" rel="Chapter" title="A Example Secure Hash Capabilities JSON Object"/>
+<link href="#rfc.appendix.A" rel="Chapter" title="A Example DRBG Capabilities JSON Object"/>
 <link href="#rfc.appendix.B" rel="Chapter" title="B Example Test Vectors JSON Object"/>
 <link href="#rfc.appendix.C" rel="Chapter" title="C Example Test Results JSON Object"/>
 <link href="#rfc.authors" rel="Chapter"/>
@@ -466,7 +466,7 @@
 <li>6.   <a href="#rfc.section.6">IANA Considerations</a></li>
 <li>7.   <a href="#rfc.section.7">Security Considerations</a></li>
 <li>8.   <a href="#rfc.references">Normative References</a></li>
-<li>Appendix A.   <a href="#rfc.appendix.A">Example Secure Hash Capabilities JSON Object</a></li>
+<li>Appendix A.   <a href="#rfc.appendix.A">Example DRBG Capabilities JSON Object</a></li>
 <li>Appendix B.   <a href="#rfc.appendix.B">Example Test Vectors JSON Object</a></li>
 <li>Appendix C.   <a href="#rfc.appendix.C">Example Test Results JSON Object</a></li>
 <li><a href="#rfc.authors">Author's Address</a></li>
@@ -998,7 +998,7 @@
     </tr>
   </tbody>
 </table>
-<h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example Secure Hash Capabilities JSON Object</a></h1>
+<h1 id="rfc.appendix.A"><a href="#rfc.appendix.A">Appendix A.</a> <a href="#app-reg-ex" id="app-reg-ex">Example DRBG Capabilities JSON Object</a></h1>
 <p id="rfc.section.A.p.1">The following is a example JSON object advertising support for CTR_DRBG with 3KeyTDEA.</p>
 <pre>
 
