Add references and minor cleanup

--- a/artifacts/acvp_sub_drbg.html
+++ b/artifacts/acvp_sub_drbg.html
@@ -479,7 +479,7 @@
   </ul>
 
   <h1 id="rfc.section.1"><a href="#rfc.section.1">1.</a> Introduction</h1>
-<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing DRBG crypto algorithms using ACVP.</p>
+<p id="rfc.section.1.p.1">The Automated Crypto Validation Protocol (ACVP) defines a mechanism to automatically verify the cryptographic implementation of a software or hardware crypto module.  The ACVP specification defines how a crypto module communicates with an ACVP server, including crypto capabilities negotiation, session management, authentication, vector processing and more.  The ACVP specification does not define algorithm specific JSON constructs for performing the crypto validation.  A series of ACVP sub-specifications define the constructs for testing individual crypto algorithms.  Each sub-specification addresses a specific class of crypto algorithms.  This sub-specification defines the JSON constructs for testing NIST-approved DRBG algorithms from SP 800-90A <a href="#SP800-90A">[SP800-90A]</a> using ACVP. See also <a href="#DRBGVS">[DRBGVS]</a> </p>
 <h1 id="rfc.section.1.1"><a href="#rfc.section.1.1">1.1.</a> Requirements Language</h1>
 <p id="rfc.section.1.1.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted in <a href="#RFC2119">RFC 2119</a> <cite title="NONE">[RFC2119]</cite>.</p>
 <h1 id="rfc.section.1.2"><a href="#rfc.section.1.2">1.2.</a> <a href="#defaults_def" id="defaults_def">Default values</a></h1>
@@ -1089,9 +1089,21 @@
     </tr>
     <tr>
       <td class="reference">
+        <b id="DRBGVS">[DRBGVS]</b>
+      </td>
+      <td class="top"><a title="NIST">Keller, S.</a> and <a title="NIST">T. Hall</a>, "<a href="http://csrc.nist.gov/groups/STM/cavp/documents/drbg/DRBGVS.pdf">The NIST SP 800-90A Deterministic Random Bit Generator Validation SYSTEM (DRBGVS)</a>", October 2015.</td>
+    </tr>
+    <tr>
+      <td class="reference">
         <b id="RFC2119">[RFC2119]</b>
       </td>
       <td class="top"><a>Bradner, S.</a>, "<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>", BCP 14, RFC 2119, DOI 10.17487/RFC2119, March 1997.</td>
+    </tr>
+    <tr>
+      <td class="reference">
+        <b id="SP800-90A">[SP800-90A]</b>
+      </td>
+      <td class="top"><a title="NIST">Barker, E.</a> and <a title="NIST">J. Kelsey</a>, "<a href="http://nvlpubs.nist.gov/nistpubs/SpecialPublications/NIST.SP.800-90Ar1.pdf">Recommendation for Random Number Generation Using Deterministic Random Bit Generators</a>", June 2015.</td>
     </tr>
   </tbody>
 </table>
