--- a/artifacts/acvp_sub_kdf135.html
+++ b/artifacts/acvp_sub_kdf135.html
@@ -1794,9 +1794,9 @@
   </tbody>
 </table>
 <h1 id="rfc.section.4"><a href="#rfc.section.4">4.</a> <a href="#vector_responses" id="vector_responses">Test Vector Responses</a></h1>
-<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response for IKEv1.</p>
+<p id="rfc.section.4.p.1">After the ACVP client downloads and processes a vector set, it must send the resonse vectors back to the ACVP server.  The following table describes the JSON object that represents a vector set response.</p>
 <div id="rfc.table.27"/>
-<div id="vr_top_table1"/>
+<div id="vr_top_table"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
   <thead>
@@ -1817,6 +1817,26 @@
       <td class="left">Unique numeric identifier for the vector set</td>
       <td class="left">value</td>
     </tr>
+    <tr>
+      <td class="left">test_results</td>
+      <td class="left">Array of JSON objects that represent each test vector result, as defined by the tables below</td>
+      <td class="left">array</td>
+    </tr>
+  </tbody>
+</table>
+<p id="rfc.section.4.p.2">The following table describes the JSON object that represents a vector set response for IKEv1.</p>
+<div id="rfc.table.28"/>
+<div id="vr_top_table1"/>
+<table cellpadding="3" cellspacing="0" class="tt full center">
+  <caption>Vector Set Response JSON Object</caption>
+  <thead>
+    <tr>
+      <th class="left">JSON Value</th>
+      <th class="left">Description</th>
+      <th class="left">JSON type</th>
+    </tr>
+  </thead>
+  <tbody>
     <tr>
       <td class="left">skeyid</td>
       <td class="left">Results of the extraction step.</td>
@@ -1839,8 +1859,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.2">The following table describes the JSON object that represents a vector set response for IKEv2.</p>
-<div id="rfc.table.28"/>
+<p id="rfc.section.4.p.3">The following table describes the JSON object that represents a vector set response for IKEv2.</p>
+<div id="rfc.table.29"/>
 <div id="vr_top_table2"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1852,16 +1872,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
     <tr>
       <td class="left">skeyseed</td>
       <td class="left">Results of the extraction step.</td>
@@ -1889,8 +1899,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.3">The following table describes the JSON object that represents a vector set response for ANS X9.63.</p>
-<div id="rfc.table.29"/>
+<p id="rfc.section.4.p.4">The following table describes the JSON object that represents a vector set response for ANS X9.63.</p>
+<div id="rfc.table.30"/>
 <div id="vr_top_table3"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1903,24 +1913,14 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">kdata result value</td>
+      <td class="left">kdata</td>
       <td class="left">Key data value.</td>
       <td class="left">value</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.4">The following table describes the JSON object that represents a vector set response for SSH.</p>
-<div id="rfc.table.30"/>
+<p id="rfc.section.4.p.5">The following table describes the JSON object that represents a vector set response for SSH.</p>
+<div id="rfc.table.31"/>
 <div id="vr_top_table4"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1932,16 +1932,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
     <tr>
       <td class="left">initiv_cs</td>
       <td class="left">Client to server initial IV</td>
@@ -1974,8 +1964,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.5">The following table describes the JSON object that represents a vector set response for SRTP.</p>
-<div id="rfc.table.31"/>
+<p id="rfc.section.4.p.6">The following table describes the JSON object that represents a vector set response for SRTP.</p>
+<div id="rfc.table.32"/>
 <div id="vr_top_table5"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -1987,16 +1977,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
     <tr>
       <td class="left">srtp_ke</td>
       <td class="left">SRTP encryption key</td>
@@ -2029,8 +2009,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.6">The following table describes the JSON object that represents a vector set response for SNMP.</p>
-<div id="rfc.table.32"/>
+<p id="rfc.section.4.p.7">The following table describes the JSON object that represents a vector set response for SNMP.</p>
+<div id="rfc.table.33"/>
 <div id="vr_top_table6"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -2043,24 +2023,14 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
       <td class="left">skey</td>
       <td class="left">Shared key value.</td>
       <td class="left">value</td>
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.7">The following table describes the JSON object that represents a vector set response for TLS.</p>
-<div id="rfc.table.33"/>
+<p id="rfc.section.4.p.8">The following table describes the JSON object that represents a vector set response for TLS.</p>
+<div id="rfc.table.34"/>
 <div id="vr_top_table7"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -2073,16 +2043,6 @@
   </thead>
   <tbody>
     <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
       <td class="left">msecret</td>
       <td class="left">Master secret value.</td>
       <td class="left">value</td>
@@ -2094,8 +2054,8 @@
     </tr>
   </tbody>
 </table>
-<p id="rfc.section.4.p.8">The following table describes the JSON object that represents a vector set response for TPM.</p>
-<div id="rfc.table.34"/>
+<p id="rfc.section.4.p.9">The following table describes the JSON object that represents a vector set response for TPM.</p>
+<div id="rfc.table.35"/>
 <div id="vr_top_table8"/>
 <table cellpadding="3" cellspacing="0" class="tt full center">
   <caption>Vector Set Response JSON Object</caption>
@@ -2107,16 +2067,6 @@
     </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="left">acv_version</td>
-      <td class="left">Protocol version identifier</td>
-      <td class="left">value</td>
-    </tr>
-    <tr>
-      <td class="left">vs_id</td>
-      <td class="left">Unique numeric identifier for the vector set</td>
-      <td class="left">value</td>
-    </tr>
     <tr>
       <td class="left">skey</td>
       <td class="left">Shared key value.</td>
