--- a/artifacts/acvp_protocol.html
+++ b/artifacts/acvp_protocol.html
@@ -411,7 +411,7 @@
 
   <meta name="dct.creator" content="Fussell, B., Ed." />
   <meta name="dct.identifier" content="urn:ietf:id:draft-ietf-acvp-protocol-0.2" />
-  <meta name="dct.issued" scheme="ISO8601" content="2016-8-4" />
+  <meta name="dct.issued" scheme="ISO8601" content="2016-8-9" />
   <meta name="dct.abstract" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
   <meta name="description" content="This document defines the Automated Cryptographic Validation Protocol(ACVP)." />
 
@@ -432,10 +432,10 @@
 </tr>
 <tr>
   <td class="left">Intended status: Informational</td>
-  <td class="right">August 4, 2016</td>
+  <td class="right">August 9, 2016</td>
 </tr>
 <tr>
-  <td class="left">Expires: February 5, 2017</td>
+  <td class="left">Expires: February 10, 2017</td>
   <td class="right"></td>
 </tr>
 
@@ -456,7 +456,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet-Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 5, 2017.</p>
+<p>This Internet-Draft will expire on February 10, 2017.</p>
 <h1 id="rfc.copyrightnotice">
   <a href="#rfc.copyrightnotice">Copyright Notice</a>
 </h1>
@@ -716,7 +716,7 @@ Authorization: Bearer JWT
 <p class="figure">Figure 6</p>
 <p id="rfc.section.11.1.p.2">The authentication mechanism will be defined by the server.</p>
 <h1 id="rfc.section.11.2"><a href="#rfc.section.11.2">11.2.</a> Product Registration with Capabilities</h1>
-<p id="rfc.section.11.2.p.1">POST the registration to the server consisting of the ACVP version, Operating Environment (OE), vector encoding, capabilities and any extensions.</p>
+<p id="rfc.section.11.2.p.1">POST the registration to the server consisting of the ACVP version, Operating Environment (OE), vector encoding, capabilities and any extensions. In addition, if an algorithm certificate is not desired for this registration populate the field "certificate_request"  with "no".</p>
 <div id="rfc.figure.7"/>
 <div id="xml_json3"/>
 <pre>
@@ -728,6 +728,7 @@ Accept:
 {
 "operation" : "register",
 "acv_version" : "0.2",
+"certificate_request" : "yes",
 "oe_information" : {
 "vendor_name" : "Cisco",
 "vendor_url" : "www.cisco.com",
